--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -65,7 +65,7 @@ img {
 }
 
 .number {
-	color: rgb( 142, 190, 64 );
+	color: rgb(117,191,46);
 	float: left;
 	padding: 15px  10px 15px 5px;
 }
@@ -89,8 +89,8 @@ img {
     transition: 0.3s ease;
 }
 .callback_btn:hover {
-	border: 1px solid rgb( 142, 190, 64 );
-	background-color: rgb( 142, 190, 64 );
+	border: 1px solid rgb(117,191,46);
+	background-color: rgb(117,191,46);
 }
 .nav_item {
 	float: left;
@@ -107,8 +107,8 @@ img {
     transition: 0.3s ease;
 }
 .lang_item:hover {
-    background-color: rgb( 142, 190, 64 );
-    border: 1px solid rgb( 148, 170, 60);
+    background-color: rgb(117,191,46);
+    border: 1px solid rgb(117,191,46);
 }
 
 .nav {
@@ -178,7 +178,7 @@ img {
 height: 0;
 border-style: solid;
 border-width: 0 9px 8px 9px;
-border-color: transparent transparent rgb( 142, 190, 64 ) transparent;
+border-color: transparent transparent rgb(117,191,46) transparent;
     position: absolute;
     top: -8px;
     left: 50%;
@@ -190,7 +190,7 @@ border-color: transparent transparent rgb( 142, 190, 64 ) transparent;
     text-decoration: none;
     display: block;
     border-radius: 4px;
-    background-color: rgb( 142, 190, 64 );
+    background-color: rgb(117,191,46);
 }
 .dropdown-content a:hover {
 	border: 1px solid #fff;
