--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -132,7 +132,7 @@ img {
     /* margin: 10px 0; */
 }
 .nav_item_link:hover {
-	background-color: rgb( 142, 190, 64 );
+	background-color: rgb(117,191,46);
     border-radius: 6px;
     color: #fff;
 }
