--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -87,6 +87,7 @@ img {
     border-radius: 10px;
     padding: 5px;
     transition: 0.3s ease;
+    cursor: pointer;
 }
 .callback_btn:hover {
 	border: 1px solid rgb(117,191,46);
