--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -160,6 +160,9 @@ img {
     position: relative;
     display: inline-block;
 }
+.active {
+	display: block!important;
+}
 .dropdown-content {
     display: none;
     position: absolute;
@@ -197,9 +200,9 @@ border-color: transparent transparent rgb(36, 59, 0) transparent;
 	border: 1px solid #fff;
 }
 
-.dropdown:hover .dropdown-content {
+/*.dropdown:hover .dropdown-content {
     display: block;
-}
+}*/
 .dropdown-content_item {
 	list-style: none;
 }
@@ -301,7 +304,6 @@ background-color: #fff;
 	float: left;
 	width: 400px;
   font-size: 16px;
-  font-family: "OpenSans";
   color: rgb( 114, 116, 114 );
   text-transform: uppercase;
   line-height: 1.5;
@@ -578,6 +580,7 @@ label[for=name] {
   background-color: rgb(36, 59, 0);
     box-shadow: 0px 2px 0px 0px #2c4700;
     width: 195px;
+    font-family: "OpenSans", sans-serif;
     height: 37px;
     color: #ffffff;
     font-size: 18px;
