--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -174,6 +174,17 @@ img {
     border-radius: 4px;
     z-index: 4;
 }
+.dropdown-content.wide {
+    display: none;
+    position: absolute;
+    min-width: 280px;
+    text-align: left;
+    top: 30px;
+    left: 50%;
+    margin-left: -140px;
+    border-radius: 4px;
+    z-index: 4;
+}
 .dropdown-content:after {
 	content: "";
     display: block;
