--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -319,7 +319,8 @@ background-color: #fff;
 .prerogatives_item {
 	text-align: center;
 	float: left;
-	width: 400px;
+	    width: 30%;
+    padding: 1%;
   font-size: 16px;
   color: rgb( 114, 116, 114 );
   text-transform: uppercase;
@@ -336,24 +337,16 @@ background-color: #fff;
 .activity_img img {
 	border-radius: 40px;
       -webkit-transition: all 1s ease-out;
+      width: 436px;
+    height: 290px;
 }
-.activity_img img:hover {
+/*.activity_img img:hover {
 	border-radius: 40px;
 	-webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
-}
-.activity_img_container:hover {
-	border-radius: 40px;
-}
-.activity_img_container {
-border-radius: 40px;
-    overflow: hidden;
-    width: 436px;
-    height: 290px;
-    margin: 0 auto;
+}*/
 
-}
 
 .activity_item:nth-child(even) .activity_text{
     float: left;
@@ -372,7 +365,7 @@ border-radius: 40px;
 	
 }
 .activity_text {
-	    width: 590px;
+	width: 590px;
     text-align: center;
     float: right;
     font-size: 24px;
@@ -389,11 +382,10 @@ border-radius: 40px;
     padding: 15% 10%;
     width: 50%;
     margin: 0 auto;
-    word-break: break-word;
-     white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+    white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
         white-space: -o-pre-wrap;    /* Opera 7 */
         white-space: pre-wrap;       /* css-3 */
-    overflow-wrap: break-word!important;
+   
 
     border-radius: 50%;
     background-color: #d2e3b5;
@@ -455,6 +447,7 @@ border-radius: 40px;
   font-family: "OpenSans", sans-serif;
   color: rgb( 255, 255, 255 );
   text-align: left;
+  overflow: hidden;
  
 
 }
@@ -465,6 +458,7 @@ border-radius: 40px;
   font-family: "OpenSans", sans-serif;
   color: rgb( 255, 255, 255 );
   line-height: 30px;
+  overflow: hidden;
 }
 
 .footer_cont {
@@ -646,6 +640,89 @@ label[for=name] {
 	font-size: 24px;
 	display: none;
 }
+
+/*certification*/
+.header_block {
+	background-color: rgb( 210, 227, 181 );
+}
+.breadcrumbs_container {
+	padding: 20px;
+	padding-right: 0;
+	padding-left: 35px;
+	float: left;
+}
+.section_header {
+	float: right;
+	padding: 20px 0;
+  font-size: 20px;
+  font-weight: lighter;
+  color: rgb( 36, 59, 0 );
+  text-transform: uppercase;
+  text-align: left;
+
+}
+.breadcrumbs {
+	width: 85%;
+	float: right;
+}
+.breadcrumbs_item {
+	list-style: none;
+	float: left;
+	padding-right: 5px;
+}
+.breadcrumbs_link {
+  font-size: 12px;
+  
+  color: rgba( 36, 59, 0, 0.6 );
+  line-height: 2.25;
+  text-align: center;
+  text-decoration: none;
+}
+
+.breadcrumbs_link.active {
+	font-weight: bold;
+}
+/*.breadcrumbs_item:after {
+    content: " >";
+}*/
+.inside_header {
+	 font-size: 20px;
+  font-family: "Georgia";
+  color: rgb( 36, 59, 0 );
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 40px 0;
+}
+
+.certif_block_head {
+	 font-size: 18px;
+  color: #8ebe40;
+  line-height: 1.667;
+  text-align: left;
+  font-family: "OpenSans";
+}
+.certif_wrapper {
+	max-width: 780px;
+	margin: 0 auto;
+	padding: 0 10px;
+}
+.certif_block {
+	padding-bottom: 40px;
+}
+.certif_block_text {
+	color: #243b00;
+	 font-size: 18px;
+	 font-family: "OpenSans";
+	 font-weight: lighter;
+	 text-align: justify;
+}
+.certif_block_text p {
+	padding: 10px 0;
+}
+
+
+
 @media (min-width: 700px) {
 	.hamburger_menu {
 	display: none;
@@ -763,6 +840,21 @@ border:none;
     background-color: #fff;
      padding-bottom: 20px; 
 }
+}
+@media (max-width: 1300px) {
+	.column-2 {
+		width: 100%;
+		padding: 20px 0;
+		float: none;
+	}
+	.column-4 {
+    width: 50%;
+    float: left;
+}
+.column-5 {
+    width: 50%;
+    float: left;
+    }
 }
 @media (max-width: 500px) {
 	.number {
