--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -1245,6 +1245,36 @@ ol ol li:last-child {margin-bottom:0;}
 .tabs_item .fa-angle-right {
 	padding-right: 10px;
 }
+.scroll_to_top.show {
+    filter: alpha(opacity=100);
+    opacity: 1;
+    bottom: 2em;
+}
+.scheme_original a {
+    color: #28262b;
+}
+.scroll_to_top {
+    position: fixed !important;
+    z-index: 100001 !important;
+    display: block;
+    padding: 5px 9px;
+    text-align: center;
+    bottom: -4em;
+    right: 2em;
+    background: rgb(117,191,46);
+    border: none;
+    cursor: pointer;
+    -webkit-transition: all ease 1.5s;
+    -moz-transition: all ease 1.5s;
+    -ms-transition: all ease 1.5s;
+    -o-transition: all ease 1.5s;
+    transition: all ease 1.5s;
+    filter: alpha(opacity=0);
+    opacity: 0;
+}
+.scroll_to_top .fa-angle-up {
+	color: #fff;
+}
 @media (max-width: 1000px) {
 	.certificaion_infografic_item {
 		margin-left: 100px;
