--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	
 }
+
 @font-face {
 	font-family:"Open Sans Light";
 src: url("OpenSans-Light.woff") format("woff"),}
@@ -834,6 +835,7 @@ font-size: 18px;
     float: left;
     position: relative;
     left: 40%;
+    padding-bottom: 90px;
 }
 .side_contact_container {
     position: absolute;
@@ -1275,7 +1277,7 @@ ol ol li:last-child {margin-bottom:0;}
     position: fixed !important;
     z-index: 100001 !important;
     display: block;
-    padding: 5px 9px;
+    padding: 4px 9px;
     text-align: center;
     bottom: -4em;
     right: 2em;
