--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -290,7 +290,33 @@ background-color: #fff;
     top: 12px;
     padding-right: 8px;
 }
-
+#partners_client .owl-buttons div{
+    background-color: #fff;
+    border: 2px solid #2c4700;
+    border-radius: 50%;
+    color: #2c4700;
+    font-size: 25px;
+    line-height: 24px;
+    padding-top: 0;
+    position: absolute;
+    text-align: center;
+}
+#partners_client .owl-buttons .owl-prev {
+    left: 0;
+    top: 12px;
+    padding-left: 8px;
+}
+#partners_client .owl-buttons .owl-next {
+    right: 0;
+    top: 12px;
+    padding-right: 8px;
+}
+#partners_client .owl-pagination  {
+  display: none;
+}
+.about_partners {
+  padding-top: 60px;
+}
 .owl-carousel .owl-item {
     text-align: center;
 }
@@ -450,15 +476,13 @@ background-color: #fff;
 	
 }
 .column-4 {
-	width: 35%;
-	float: left;
+	position: absolute;
+  left: 0;
 	height: 100%;
-	background-color: #fff;
-	/*display: table;*/
+  width: 300px;
+	background-color: rgba(255, 255, 255,0.8);
 }
 .column-5 {
-	width: 65%;
-	float: left;
 	height: 100%;
 }
 
@@ -518,9 +542,7 @@ background-color: #fff;
 	color: rgb(117,191,46);
 }
 .footer_contacts {
-	background-color: #fff;
 	color: #617c44;
-	width: 90%;
 	margin: 0 auto;
 	padding-top: 80px;
 	padding-left: 10px;
@@ -757,7 +779,12 @@ font-family: 'OpenSans', sans-serif;
 	 font-size: 18px;
 	 font-family: "Open Sans";
 	 text-align: justify;
+   padding-top: 20px;
 }
+.about_us_block_text div {
+  padding: 10px 0;
+}
+
 .certif_block_text p {
 	padding: 10px 0;
 }
@@ -778,9 +805,6 @@ font-size: 18px;
   color: rgb( 36, 59, 0 );
   line-height: 1.333;
   text-align: center;
-  -moz-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
-  -webkit-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
-  -ms-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
   position: relative;
 }
 .col-1 .fa {
@@ -804,7 +828,7 @@ font-size: 18px;
     margin-bottom: 15px;
 }
 .contact_form input[type="submit"] {
-	width: 25%;
+	width: 30%;
 	text-transform: uppercase;
 	color: #fff;
 	background-color: #8ebe40;
@@ -863,16 +887,18 @@ font-size: 18px;
 	margin: 15px auto;
 }
 .img_text {
-	position: absolute;
-	bottom: 0;
-	left: 25%;
-	margin-left: -25%;
-	font-size: 30px;
-	font-family: Georgia;
-	font-weight: bold;
-	padding: 20px 80px;
-	background-color: rgba( 255, 255, 255, 0.6 );
-	color: #243b00;
+    margin: 0 auto;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    font-size: 30px;
+    font-family: Georgia;
+    font-weight: bold;
+    padding: 30px 0;
+    background-color: rgba( 255, 255, 255, 0.6 );
+    color: #243b00;
 }
 .inner_block_wrapper.post_header {
 	background-color: #d2e3b5;
@@ -1143,7 +1169,6 @@ display: inline-block;
 /*certification_infografic*/
 .certificaion_infografic_item {
 	padding-bottom: 50px;
-	padding-top: 20px;
 	font-size: 16px;
   font-family: "Open Sans";
   color: rgb( 36, 59, 0 );
@@ -1158,7 +1183,7 @@ ol {
 ol > li {
 	position:relative; /* Create a positioning context */
 	margin:0 0 6px 2em; /* Give each list item a left margin to make room for the numbers */
-	padding:4px 8px; /* Add some spacing around the content */
+	padding:4px 20px; /* Add some spacing around the content */
 	list-style:none; /* Disable the normal item numbering */
 
 }
@@ -1298,6 +1323,13 @@ ol ol li:last-child {margin-bottom:0;}
 .scroll_to_top .fa-angle-up {
 	color: #fff;
 }
+.about_post_head {
+	font-family: Georgia,sans-serif;
+	text-align: justify;
+	font-weight: bold;
+	font-style: italic;
+	font-size: 18px;
+}
 @media (max-width: 1000px) {
 	.certificaion_infografic_item {
 		margin-left: 100px;
@@ -1320,8 +1352,19 @@ ol ol li:last-child {margin-bottom:0;}
 		width: 100%;
 		float: none;
 	}
+  .footer_contai {
+    width: 100%;
+    position: relative;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+.footer_contacts {
+  padding-top: 20px;
+}
 	.certificaion_infografic_item {
     margin-left: 70px;
+}
 }
 	.tabs_content {
 		margin-left: 20px;
@@ -1337,22 +1380,6 @@ ol ol li:last-child {margin-bottom:0;}
 	.inner_block_wrapper p {
 		padding: 10px;
 	}
-	.inner_block img {
-     float: none; 
-    overflow: hidden;
-    padding-right: 0;
-}
-
-	.img_text {
-    position: static;
-    margin-left: 0;
-    font-size: 24px;
-    font-family: Georgia;
-    font-weight: bold;
-    padding: 20px 5px;
-    background-color: rgba( 255, 255, 255, 0.6 );
-    color: #243b00;
-}
 	.activity_item {
 		display: block;
     padding: 30px 0;
@@ -1378,15 +1405,121 @@ ol ol li:last-child {margin-bottom:0;}
     margin-bottom: 20px;
 }
 }
-
 .error {
     color: red!important;
     float: left;
 }
+.company_partners {
+	text-align: justify;
+}
+.company_partners:after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+}
+.company_partners img {
+	display: inline-block;
+}
+.about_items {
+	padding-bottom: 20px;
+	border-bottom: 1px solid #d2e3b5;
+	margin-bottom: 20px;
+}
+.about_prefooter_head {
+	font-size: 24px;
+  font-family: "Georgia";
+  color: rgb( 36, 59, 0 );
+  font-weight: bold;
+	text-align: center;
+	padding-bottom: 100px;
+	padding-top: 40px;
+}
+.about_us_block_text span {
+	font-weight: bold;
+	font-family: OpenSans, sans-serif;
+}
+.about_items h3 {
+	font-family: Georgia;
+	font-weight: 24px;
+	font-size: 24px;
+	text-align: center;
+	padding-bottom: 30px;
+}
 
-@media (min-width: 720px) {
-	.hamburger_menu {
-	display: none;
+.manufacturers_item.single_page {
+	width: 100%;
+	padding: 20px 0;
+}
+.single_page .manufacturers_item_head {
+	font-family: OpenSans, sans-serif;
+	font-weight: bold;
+	font-size: 18px;
+	text-transform: capitalize;
+}
+
+@media (max-width: 960px) {
+  .column-2  {
+  width: 90%;
+  float: none;
+}
+.column-4 {
+    width: 100%;
+    float: none;
+    height: auto;
+}
+.column-5 {
+  display: none;
+}
+@media (max-width: 960px) {
+.hamburger_menu {
+  display: block;
+}
+.nav {
+  display: none;
+  width: 100%;
+}
+.active {
+  display: block;
+}
+.nav_item.active{
+  border-width: 0;
+    margin: 7px auto;
+    width: 100%;
+}
+.col_container {
+    width: 100%;
+}
+.dropdown-content {
+    display: none;
+    position: static!important;
+    z-index: 4;
+    margin-left: 0!important;
+    text-align: center;
+    z-index: 4;
+}
+.dropdown-content.wide {
+    display: none;
+    position: static!important;
+    z-index: 4;
+    text-align: center;
+    margin-left: 0!important
+}
+.dropdown-content:after {
+  content: "";
+    display: block;
+    width: 0;
+height: 0;
+border:none;
+    position: static;
+}
+.dropdown-content_item {
+  padding-left: 0;
+  padding-right: 0;
+}
+.dropdown-content a {
+  padding-left: 0;
+  padding-right: 0;
+  font-size: 14px;
 }
 }
 @media (max-width: 720px) {
@@ -1394,8 +1527,14 @@ ol ol li:last-child {margin-bottom:0;}
 	.slider__list--wrap {
     width: 150px;
 }
+  .inner_block img {
+     float: none; 
+    overflow: hidden;
+    padding-right: 0;
+}
 
 	.section_header {
+    line-height: 22px;
 		font-size: 12px;
 	}
 	.prerogatives_item {
@@ -1419,77 +1558,16 @@ ol ol li:last-child {margin-bottom:0;}
 .bxslider li img{
 	height: 300px!important;
 }
-.hamburger_menu {
-	display: block;
-}
 .lang {
 	float: right;
 }
-.active {
-	display: block;
-}
-.nav_item.active{
-	border-width: 0;
-    margin: 7px auto;
-    width: 100%;
-}
-.nav {
-	display: none;
-	width: 100%;
-}
-.col_container {
-    width: 100%;
-}
-.dropdown-content {
-    display: none;
-    position: static!important;
-    z-index: 4;
-    margin-left: 0!important;
-    text-align: center;
-    z-index: 4;
-}
-.dropdown-content.wide {
-    display: none;
-    position: static!important;
-    z-index: 4;
-    text-align: center;
-    margin-left: 0!important
-}
-.dropdown-content:after {
-	content: "";
-    display: block;
-    width: 0;
-height: 0;
-border:none;
-    position: static;
-}
-.dropdown-content_item {
-	padding-left: 0;
-	padding-right: 0;
-}
-..dropdown-content a {
-	padding-left: 0;
-	padding-right: 0;
-}
+
 .number_item {
 	float: none;
 	text-align: right;
 }
-.column-2  {
-	width: 90%;
-	float: none;
-}
 .footer_summary {
 	width: 100%;
-}
-.column-4 {
-	width: 100%;
-	float: none;
-}
-.column-5 {
-	width: 100%;
-	float: none;
-	height: 300px;
 }
 .footer_item {
 	overflow: visible;
@@ -1513,6 +1591,7 @@ border:none;
      padding-bottom: 20px; 
 }
 }
+
 
 @media (max-width: 500px) {
 	.number {
@@ -1538,13 +1617,12 @@ border:none;
 	.contact_form input, textarea {
 		padding: 20px 10px;
 	}
-	.copyright {
-		padding-left: 0px;
-		padding-top: 10px;
-	}
 	.activity_text p {
     word-wrap: break-word;
     width: auto;
+}
+.callback_btn {
+  display: none;
 }
 
 	.manufacturers_item {
@@ -1556,10 +1634,6 @@ border:none;
 .manufacturers_item_content {
 	padding-left: 4%;
 }
-.manufacturers_slider {
-    float: none;
-    width: 100%;
-}
 	.manufacturers_item {
     float: none;
     width: 100%;
@@ -1569,6 +1643,7 @@ border:none;
     width: 100%;
     margin: 0 auto;
     text-align: center;
+    margin-left: 20px;
 }
 .slider {
 	margin-left: 0;
@@ -1592,9 +1667,6 @@ border:none;
     color: rgb( 36, 59, 0 );
     line-height: 1.333;
     text-align: center;
-    -moz-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
-    -webkit-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
-    -ms-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
     position: static;
 }
 .side_contact_container {
@@ -1608,9 +1680,6 @@ border:none;
     color: rgb( 36, 59, 0 );
     line-height: 1.333;
     text-align: center;
-    -moz-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
-    -webkit-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
-    -ms-transform: matrix( 1.00004740819403,0,0,1.00100404525626,0,0);
 }
 .contact_form {
 	margin-left: 0;
@@ -1691,6 +1760,14 @@ border:none;
 }
 .inner_block .inner_block_header {
 	padding: 20px 10px;
+  text-align: center;
+}
+.img_text {
+  font-size: 12px;
+  padding: 20px 0;
+}
+.client_manufacture {
+  padding-bottom: 0;
 }
 .inner_block_wrapper.post_header div{
 	padding: 0 10px;
