--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -6,7 +6,10 @@
 
 @font-face {
 	font-family:"Open Sans Light";
-src: url("OpenSans-Light.woff") format("woff"),}
+src: url("OpenSans-Light.woff") format("woff")}
+@font-face {
+  font-family:"Open Sans";
+src: url("OpenSans-Regular.ttf") format("ttf")}
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 body{
    font-family: "Open Sans";
