--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -1339,6 +1339,13 @@ ol ol li:last-child {margin-bottom:0;}
 	font-style: italic;
 	font-size: 18px;
 }
+.certif3_block_head {
+font-weight: 400;
+padding-top: 30px;
+}
+.certif_3 {
+  padding-bottom: 60px;
+}
 @media (max-width: 1000px) {
 	.certificaion_infografic_item {
 		margin-left: 100px;
