--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -713,7 +713,7 @@ label[for=name] {
 	float: right;
 	padding: 20px 0;
   font-size: 20px;
-  font-family: "Open-Sans-Light";
+  font-family: "Open-Sans-Light", sans-serif;
   color: rgb( 36, 59, 0 );
   text-transform: uppercase;
   text-align: left;
@@ -1545,7 +1545,7 @@ border:none;
   }
 
 	.slider__list--wrap {
-    width: 150px;
+    width: 300px;
 }
   .inner_block img {
      float: none; 
@@ -1663,10 +1663,9 @@ border:none;
     width: 100%;
     margin: 0 auto;
     text-align: center;
-    margin-left: 20px;
 }
 .slider {
-	margin-left: 0;
+	margin-left: 20px;
 }
 .footer_contai {
     width: 100%;
@@ -1805,5 +1804,13 @@ border:none;
 }
 .main_news > img {
 	width: 100%;
+}
+.col-1 {
+  display: none;
+}
+}
+@media (max-width: 420px) {
+  .slider__list--wrap {
+    width: 150px;
 }
 }
