--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -3,15 +3,14 @@
 	padding: 0;
 	
 }
-
-
-@font-face {
-  font-family:"OpenSans";
-src: url("../font/OpenSans-Regular.ttf") format("ttf");
+.courier {
+      font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 }
-
+.source {
+  font-family: 'Source Sans Pro', sans-serif;
+}
 body{
-   font-family: "OpenSans", sans-serif!important;
+  font-family: 'Open Sans', sans-serif!important;
 }
 ::-moz-selection { /* Code for Firefox */
     background: rgb(117,191,46);
