--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -3,14 +3,8 @@
 	padding: 0;
 	
 }
-.courier {
-      font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
-}
-.source {
-  font-family: 'Source Sans Pro', sans-serif;
-}
 body{
-  font-family: 'Open Sans', sans-serif!important;
+  font-family: Arial, Helvetica, sans-serif!important;
 }
 ::-moz-selection { /* Code for Firefox */
     background: rgb(117,191,46);
