--- a/halal/css/style.css
+++ b/halal/css/style.css
@@ -821,6 +821,7 @@ font-size: 18px;
     border-radius: 0;
     outline: none;
     margin-bottom: 15px;
+    font-family: Arial, Helvetica, sans-serif!important;
 }
 .contact_form input[type="submit"] {
 	width: 30%;
@@ -833,6 +834,7 @@ font-size: 18px;
 	padding: 10px 20px;
 	border: 1px solid #8ebe40;
 	transition: 0.3s ease;
+  font-family: Arial, Helvetica, sans-serif!important;
 }
 .contact_form input[type="submit"]:hover {
 	background-color: #fff;
@@ -844,6 +846,7 @@ font-size: 18px;
 	color: #3b683d;
 	float: right;
 	padding-right: 20px;
+  font-family: Arial, Helvetica, sans-serif!important;
 }
 
 .contact_form  textarea {
@@ -982,7 +985,7 @@ font-size: 18px;
 	border-radius: 50%;
 	border: 1px solid #8ebe40;
 	text-decoration: none;
-	padding: 2px 10px;
+	padding: 5px 10px;
 	font-size: 20px;
   color: rgb(142, 190, 64);
   line-height: 1.2;
